components/OurServices/styles.module.scss
.servicesWrapper {
  padding-top: 64px;
  flex-wrap: wrap;

  .serviceCard {
    flex: .3;
    transition: .4s;
    padding: 1rem;
    border-radius: 8px;

    &:hover {
      background-color: rgba(29, 29, 29, .2);
      box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);

      .iconContainer {
        transform: rotateY(180deg);
        background-color: var(--grey);
      }
    }

    .iconContainer {
      background-color: var(--yellow);
      border-radius: 50%;
      width: 80px;
      height: 80px;
      position: relative;
      perspective: 1000px;
      transform-style: preserve-3d;
      transition: 0.5s ease-in-out, opacity .3s;
      cursor: pointer;

      &:hover {
        background-color: #1d1d1da1;
      }

      .front, .back {
        position: absolute;
        width: 100%;
        height: 100%;
        backface-visibility: hidden;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 24px;
      }

      .front {
        transform: rotateY(0deg);
      }
      
      .back {
        transform: rotateY(180deg);
      }
      
    }

    .title {
      cursor: pointer;
      transition: .3s;

      &:hover {
        color: var(--yellow);
      }
    }
  }
}

.modalContainer {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 620px;
  min-height: 620px;
  background: #fff;
  border-radius: 12px;
  padding: 16px;
  position: relative;
  z-index: 0;
  
  .closeButton {
    position: absolute;
    z-index: 1;
    top: 16px;
    right: 16px;
    padding: 8px;
    cursor: pointer;
  }
}

